--- a/discovery_server/src/main/resources/application.yml
+++ b/discovery_server/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
-  application.name: discovery_server
+  application.name: discovery-server
   config:
     import: optional:configserver:${CONFIG_SERVER_URL}
   cloud.config.uri: ${CONFIG_SERVER_URL}
