--- a/order_service/src/main/resources/application.yml
+++ b/order_service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
-  application.name: order_service
+  application.name: order-service
   config:
     import: optional:configserver:${CONFIG_SERVER_URL}
   cloud.config.uri: ${CONFIG_SERVER_URL}
