--- a/auth_service/src/main/resources/application.yml
+++ b/auth_service/src/main/resources/application.yml
@@ -1,1 +1,5 @@
-spring.application.name=auth_service
+spring:
+  application.name: auth-service
+  config:
+    import: optional:configserver:${CONFIG_SERVER_URL}
+  cloud.config.uri: ${CONFIG_SERVER_URL}
