--- a/notification_service/src/main/resources/application.yml
+++ b/notification_service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
-  application.name: notification_service
+  application.name: notification-service
   config:
     import: optional:configserver:${CONFIG_SERVER_URL}
   cloud.config.uri: ${CONFIG_SERVER_URL}
