--- a/product_catalog_service/src/main/resources/application.yml
+++ b/product_catalog_service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
-  application.name: product_catalog_service
+  application.name: product-catalog-service
   config:
     import: optional:configserver:${CONFIG_SERVER_URL}
   cloud.config.uri: ${CONFIG_SERVER_URL}
