--- a/shopping_cart_service/src/main/resources/application.yml
+++ b/shopping_cart_service/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
-  application.name: shopping_cart_service
+  application.name: shopping-cart-service
   config:
     import: optional:configserver:${CONFIG_SERVER_URL}
   cloud.config.uri: ${CONFIG_SERVER_URL}
