--- a/config_server/src/main/resources/application.yml
+++ b/config_server/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 spring:
   application.name: config-server
+  cloud:
+    config:
+      server:
+        native:
+          search-locations: classpath:/configs
 server:
   port: 8888
