Added zipking docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,5 +34,11 @@ services:
         "--hostname=localhost"
       ]
 
+  zipkin:
+    image: openzipkin/zipkin:3
+    container_name: zipkin
+    ports:
+      - "9411:9411"
+
 volumes:
   postgres_data:
