--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,21 @@ services:
         "--hostname=localhost"
       ]
 
+  # Rabbitmq Service
+  rabbitmq:
+    image: rabbitmq:3.13-management
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    volumes:
+      - ./rabbitmq-data/:/var/lib/rabbitmq/
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USERNAME}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD}
+    networks:
+      - rabbit-mq-network
+
   zipkin:
     image: openzipkin/zipkin:3
     container_name: zipkin
