--- a/config_server/src/main/resources/configs/notification-service.yml
+++ b/config_server/src/main/resources/configs/notification-service.yml
@@ -1,4 +1,17 @@
 spring:
+  datasource:
+    url: ${POSTGRES_NOTIFICATION_SERVICE_DB_URL}
+    username:  ${POSTGRES_USER}
+    password: ${POSTGRES_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+    database: postgresql
 
   # RabbitMQ config
   rabbitmq:
