--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_DB: postgres
     ports:
       - "5432:5432"
     volumes:
@@ -33,7 +33,7 @@ services:
         "--db-url-host=postgres",
         "--db-username=${POSTGRES_USER}",
         "--db-password=${POSTGRES_PASSWORD}",
-        "--db-url-database=${POSTGRES_DB}",
+        "--db-url-database=${KEYCLOAK_DB}",
         "--hostname=localhost"
       ]
 
